fixed background on iPhone

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,19 @@
 
 
 html {
+
 	height:100%;
+	min-height:100%;
 	background-image: url(../images/Unknown.jpg);
 	background-size:cover;
 	background-position:80% top;
 	background-repeat: no-repeat;
-	position:relative;
+	@media (max-width: 500px){
+		position:fixed;
+		top:0px;
+		left:0px;
+	}
+	
 }
 
 
@@ -24,7 +31,7 @@ header {
 		color:white;
 		font-family:arial, sans-serif;
 	}
-	@media(max-width:580px){
+	@media(max-width:500px){
 		margin-left:10px;
 		margin-top: 20px;
 	}
@@ -32,7 +39,7 @@ header {
 
 section {
 	margin-left:40px;
-	@media(max-width: 580px){
+	@media(max-width: 500px){
 		margin-left: 10px;
 		margin-top: 280px;
 	}
@@ -44,7 +51,7 @@ section {
 		margin-bottom: 20px;
 		text-shadow: 0px 0px 50px black;
 		font-weight: 700;
-		@media(max-width: 580px){
+		@media(max-width: 500px){
 			font-size: 35px;
 		}
 	}
@@ -55,7 +62,7 @@ section {
 		font-size: 20px;
 		width: 500px;
 		line-height: 1.5;
-		@media(max-width: 580px){
+		@media(max-width: 500px){
 			font-size: 16px;
 			width: 95%;
 			margin-bottom: 20px;
@@ -69,7 +76,7 @@ section {
 		margin-right:10px;
 		margin-top: 20px;
 		border-radius:3px;
-		@media(max-width: 580px){
+		@media(max-width: 500px){
 			width: 95%;
 			margin-left:0px;
 			margin-bottom:15px;
@@ -85,7 +92,7 @@ section {
 	p {
 		color:white;
 		margin-top: 40px;
-		@media(max-width: 580px){
+		@media(max-width: 500px){
 			display:inline-block;
 			width:90%;
 			margin-bottom:10px;
@@ -107,7 +114,7 @@ section {
 			left: 10px;
 			top:25px;
 			font-size: 30px;
-			@media(max-width: 580px){
+			@media(max-width: 500px){
 				top: 5px;
 			}
 		}
@@ -140,7 +147,7 @@ section {
 	.email {
 		display:block;
 		width: 500px;
-		@media(max-width: 580px){
+		@media(max-width: 500px){
 			display:inline-block;
 			width: 95%;
 		}
@@ -153,7 +160,7 @@ footer {
 		position:absolute;
 		bottom:20px;
 		right:20px;
-		@media(max-width: 580px){
+		@media(max-width: 500px){
 			display:none;
 		}
 	}
